# cornetto

./: Cargo.toml  README.md  shell.nix
src/: fields.rs  lib.rs  quotes.rs
