[package]
name = "cornetto"
version = "0.1.0"
edition = "2021"
description = "#[cornetto(manage my config)]"
repository = "https://github.com/cppccn/cornetto/"
readme = "README.md"
authors = ["Adrien Zinger", "Yvan Sraka"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
[dependencies]
proc-macro2 = "1.0.34"
syn = "1.0.82"
quote = "1.0.10"
lazy_static = "1"
anyhow = "1"